added an entry for the migration of dc-data