@@ -143,7 +143,48 @@ Fedora repository. After that all FOXML files are transformed to the requirement
           less than the maximum id. In this case, either retry rebuilding index 
           and database, or set this to a value higher than the maximum id.
 	   
-	      
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+Migration of DC data records
+The migration procedure first copies the folder 
+backups the folder ${FEDORA_HOME}/data/objects from the current
+Fedora repository. After that DC datastream of all FOXML files are conform to
+the unqualified  DC-schema (http://purl.org/dc/elements/1.1/). 
+
+    Prerequisites:
+    - Ant in version 1.7.0
+	- stopped eSciDoc
+	- stopped Fedora 
+	
+    - Usage:
+	    1) Modify admin-tool.properties
+	      - define the location of the current repository in the property fedora-src.home
+	      	e.g. fedora-src.home=/repository/fedora3.2.1 
+	      	or on Windows
+	      	fedora-src.home=C:/repository/fedora3.2.1
+	   2) Increase the available memory by setting the system property ANT_OPTS.
+          At least to following values:
+          ANT_OPTS=-Xmx1024m -Xms512m -XX:MaxPermSize=256m
+
+      	3) The admin-tool.properties has to be placed in the same directory where  
+          the admin tool is going to be executed.
+          Execute target foxml-migration-dc of ant file build.xml
+          
+       	4) Rebuild the Fedora 3.2 resource index and SQL database. 
+       	   
+          The index and SQL database rebuild is supported by tools from Fedora.
+          Call fedora-rebuild script, located in 
+          fedora3.home/server/bin, and follow the instructions.
+          (For SQL and index rebuild see also 
+          http://fedora-commons.org/confluence/display/FCR30/
+              Command-Line+Utilities#Command-LineUtilities-rebuild)
+
+        5) Check the highest id value for escidoc in the fedora 3 database, 
+          table public.pidgen. This value should be the highest id that has been 
+          reported during the previous rebuild step. Sometimes, this value is 
+          less than the maximum id. In this case, either retry rebuilding index 
+          and database, or set this to a value higher than the maximum id.
+	   
+	      	   
         
 3.) Regenerate cache for filter methods (fast lists)
 ----------------------------------------------------
